--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,41 @@ body {
 ul li {
   padding: 1em 0;
 }
+
+#nav {
+  display: none;
+}
+
+#mobile-nav {
+  display: flex;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+  height: 60px;
+  align-items: center;
+}
+
+.top-section {
+  margin-top: 60px;
+}
+
+@media screen and (min-width: 765px) {
+  #nav {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #efefef;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    top: 0;
+    z-index: 10;
+    height: 60px;
+    align-items: center;
+  }
+
+  #mobile-nav {
+    display: none;
+  }
+}
