--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ ul li {
 }
 
 .top-section {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .rotating-title {
@@ -40,7 +40,7 @@ ul li {
 .title {
   float: left;
   margin-bottom: 0;
-  font-size: 60px;
+  font-size: 40px;
 }
 .rotating-section {
   float: left;
@@ -57,7 +57,7 @@ ul li {
   white-space: nowrap;
   top: 0;
   left: 0;
-  animation: move 6s;
+  animation: move 12s;
   animation-iteration-count: infinite;
   animation-delay: 1s;
 }
@@ -78,12 +78,6 @@ ul li {
   }
   60% {
     top: -120px;
-  }
-}
-
-@media screen and (min-width: 425px) {
-  .rotating-section {
-    font-size: 48px;
   }
 }
 
@@ -109,17 +103,28 @@ ul li {
     display: none;
   }
 
-  .rotating-title {
-    flex-direction: row;
+  .top-section {
+    margin-top: 60px;
   }
+
   .title {
     margin-right: 0.3em;
     font-size: 40px;
   }
   .rotating-section {
-    position: relative;
     text-align: left;
-    top: 40px;
     font-size: 40px;
   }
+}
+
+@media screen and (min-width: 1200px) {
+  .rotating-title {
+    flex-direction: row;
+  }
+
+  .rotating-section {
+    position: relative;
+    top: 40px;
+  }
+
 }
